--- a/index.html
+++ b/index.html
@@ -144,9 +144,42 @@
         </div>
       </div>
 
-      <!-- Unnamed (文本框) -->
-      <div id="u18" class="ax_default text_field">
-        <input id="u18_input" type="text" value="单击忘记密码"/>
+      <!-- Unnamed (水平线) -->
+      <div id="u18" class="ax_default line">
+        <img id="u18_img" class="img " src="images/index/u18.png"/>
+        <div id="u18_text" class="text ">
+          <p><span>￥199</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u19" class="ax_default box_1">
+        <img id="u19_img" class="img " src="images/index/u19.png"/>
+        <div id="u19_text" class="text ">
+          <p><span>在线客服</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (动态面板) -->
+      <div id="u20" class="ax_default">
+        <div id="u20_state0" class="panel_state" data-label="State1" style="">
+          <div id="u20_state0_content" class="panel_state_content">
+
+            <!-- Unnamed (图片) -->
+            <div id="u21" class="ax_default image">
+              <img id="u21_img" class="img " src="images/index/u21.jpg"/>
+            </div>
+          </div>
+        </div>
+        <div id="u20_state1" class="panel_state" data-label="State2" style="visibility: hidden;">
+          <div id="u20_state1_content" class="panel_state_content">
+
+            <!-- Unnamed (图片) -->
+            <div id="u22" class="ax_default image">
+              <img id="u22_img" class="img " src="images/index/u22.jpg"/>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
